added code to html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,56 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie, light blue background." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML is used to create the structure of a webpage.</li>
+          <li>HTML elements work together to provide a framework that makes it easy for a user to navigate.</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id=git-section>
+        <h2>GIT</h2>
+        <ul>
+          <li>Version control system</li>
+          <li>Doesn't use the same as bash commands, always begins with "git"</li>
+          <li>git status: what branch we are on</li>
+          <li>git checkout -b feature/[name of branch]: creates a new branch and switches to it</li>
+          <li>git add -A: to stage files after any changes are saved</li>
+          <li>git commit -m "insert commit message": after file is saved</li>
+          <li>git pull origin main: to make sure we have the latest commits and changes</li>
+          <li>git push origin feature/[name of branch]: push your commits back to Git Hub</li>
+        </ul>
+        
+        <h3>Clone Repository to Local Computer</h3>
+        <ol>Copy SSH value from "Code" </ol>
+        <ol>Open terminal</ol>
+        <ol>cd into the folder you want your repo stored</ol>
+        <ol>git clone [paste copied SSH]</ol>
+        <ol>cd [name of repo]</ol>
+        <ol>git remote -v to check the connection between the local and remote repo</ol>
+        <ol>code . </ol>
+        <ol>File will be opened with VS Code</ol>
+
+      
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
