--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie, light blue background." />
-      <h2>✨ Open the Console to See What's Happening ✨</h2>
+      <img src="./assets/java.png" alt="Image of JavaScript hot coffee cup logo, no text." />
+      <h2>☆ Open the Console to See What's Happening ☆</h2>
     
     </header>
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
+        <br>
         <ul>
           <li>HTML is used to create the structure of a webpage.</li>
           <li>HTML elements work together to provide a framework that makes it easy for a user to navigate.</li>
@@ -29,6 +30,7 @@
 
       <section class="card" id="css-section">
         <h2>CSS</h2>
+        <br>
         <ul>
           <li>CSS defines the colors, aesthetics, visual layout, and organisation of a document written in HTML.</li>
           <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
@@ -44,6 +46,7 @@
 
       <section class="card" id=git-section>
         <h2>GIT</h2>
+        <br>
         <ul>
           <li>Version control system</li>
           <li>Doesn't use the same as bash commands, always begins with "git"</li>
@@ -80,6 +83,7 @@
 
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
+        <br>
         <ul>
           <li>JavaScript (JS) allows users to interact with websites using effects, interactivity, data communication etc.</li>
           <li>Connect script.js files with a [script] tag under the footer, within the body element.</li>
@@ -100,6 +104,7 @@
     </main>
 
     <footer>
+      <br>
       <p>I can code!</p>
     </footer>
     <script src="./assets/script.js"></script>
